--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,8 @@ body {
 table {
 	margin: 0 auto;
 	width: 30%;
-	background-color: rgba(123, 171, 216, .5)
+	background-color: rgba(123, 171, 216, .5);
+	border-radius: 5px;
 }
 tfoot {
 	font-style: italic;
